--- a/src/style.css
+++ b/src/style.css
@@ -1,90 +1,46 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  --clr-primary-500: hsl(10, 79%, 65%);
+  --clr-secondary-500: hsl(186, 34%, 60%);
+  --clr-neutral-800: hsl(25, 47%, 15%);
+  --clr-neutral-700: hsl(28, 10%, 53%);
+  --clr-neutral-300: hsl(27, 66%, 92%);
+  --clr-neutral-200: hsl(33, 100%, 98%);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --ff-normal: 'DM Sans', sans-serif;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --fs-400: 1rem;
+  --fs-500: 1.5rem;
+
+  --sizes-100: 0.25rem;
+  --sizes-200: 0.5rem;
+  --sizes-300: 0.75rem;
+  --sizes-400: 1rem;
+  --sizes-500: 1.5rem;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
 }
 
-h1 {
-  font-size: 3.2em;
+h1,
+h2,
+h3,
+p {
+  font-weight: 400;
   line-height: 1.1;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
+body {
+  min-height: 100vh;
+  background: var(--clr-neutral-300);
+  display: grid;
+  place-items: center;
+  font-family: var(--ff-normal);
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  width: 100%;
 }
