--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,11 @@
   --clr-neutral-300: hsl(27, 66%, 92%);
   --clr-neutral-200: hsl(33, 100%, 98%);
 
-  --ff-normal: 'DM Sans', sans-serif;
+  --ff-normal: "DM Sans", sans-serif;
 
   --fs-400: 1rem;
   --fs-500: 1.5rem;
+  --fs-600: 2rem;
 
   --sizes-100: 0.25rem;
   --sizes-200: 0.5rem;
