--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
   --ff-normal: "DM Sans", sans-serif;
 
   --fs-400: 1rem;
+  --fs-450: 1.125rem;
   --fs-500: 1.5rem;
   --fs-600: 2rem;
 
@@ -17,6 +18,8 @@
   --sizes-300: 0.75rem;
   --sizes-400: 1rem;
   --sizes-500: 1.5rem;
+
+  --on-top: 9;
 }
 
 *,
