--- a/src/style.css
+++ b/src/style.css
@@ -6,16 +6,20 @@
   --clr-neutral-300: hsl(27, 66%, 92%);
   --clr-neutral-200: hsl(33, 100%, 98%);
 
-  --ff-normal: 'DM Sans', sans-serif;
+  --ff-normal: "DM Sans", sans-serif;
 
   --fs-400: 1rem;
+  --fs-450: 1.125rem;
   --fs-500: 1.5rem;
+  --fs-600: 2rem;
 
   --sizes-100: 0.25rem;
   --sizes-200: 0.5rem;
   --sizes-300: 0.75rem;
   --sizes-400: 1rem;
   --sizes-500: 1.5rem;
+
+  --on-top: 9;
 }
 
 *,
