--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,9 @@
   --clr-neutral-300: hsl(27, 66%, 92%);
   --clr-neutral-200: hsl(33, 100%, 98%);
 
-  --ff-normal: "DM Sans", sans-serif;
+  --ff-normal: 'DM Sans', sans-serif;
 
+  --fs-200: 0.8125rem;
   --fs-400: 1rem;
   --fs-450: 1.125rem;
   --fs-500: 1.5rem;
@@ -18,6 +19,7 @@
   --sizes-300: 0.75rem;
   --sizes-400: 1rem;
   --sizes-500: 1.5rem;
+  --sizes-600: 1rem;
 
   --on-top: 9;
 }
@@ -47,4 +49,27 @@ body {
 
 #app {
   width: 100%;
+}
+
+.container {
+  width: min(100% - 2rem, 34rem);
+  margin-inline: auto;
+}
+
+.flex {
+  display: flex;
+  gap: var(--gap, 0);
+}
+
+.grid {
+  display: grid;
+  gap: var(--gap, 0);
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.align-right {
+  text-align: right;
 }
